// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders each ProjectsSection page 1`] = `
<div>
  <div>
    <header
      class="header"
    >
      <div
        class="menuIcon"
      >
        <div />
        <div />
        <div />
        
      </div>
      <h1
        class="heading2Xl"
      >
        <a
          class="colorInherit"
          href="/"
        >
          Rushing Labs
        </a>
      </h1>
      <div
        class="navbarLinks"
      >
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/blog"
          >
            Blog
          </a>
        </h2>
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/projects"
          >
            Projects
          </a>
        </h2>
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/docs"
          >
            Docs
          </a>
        </h2>
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/about"
          >
            About
          </a>
        </h2>
      </div>
    </header>
    <div
      class="mainContent"
    >
      <div
        class="container"
      >
        <h1>
          Project: 
          amortize
        </h1>
        <ul />
      </div>
      <div
        class="backToHome"
      >
        <a
          href="/"
        >
          ← Back to home
        </a>
      </div>
      <a
        href="https://plausible.io/rushinglabs.com"
      >
        RushingLabs - Analytics
      </a>
    </div>
    
  </div>
</div>
`;

exports[`renders each ProjectsSection page 2`] = `
<div>
  <div>
    <header
      class="header"
    >
      <div
        class="menuIcon"
      >
        <div />
        <div />
        <div />
        
      </div>
      <h1
        class="heading2Xl"
      >
        <a
          class="colorInherit"
          href="/"
        >
          Rushing Labs
        </a>
      </h1>
      <div
        class="navbarLinks"
      >
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/blog"
          >
            Blog
          </a>
        </h2>
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/projects"
          >
            Projects
          </a>
        </h2>
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/docs"
          >
            Docs
          </a>
        </h2>
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/about"
          >
            About
          </a>
        </h2>
      </div>
    </header>
    <div
      class="mainContent"
    >
      <div
        class="container"
      >
        <h1>
          Project: 
          game-capture
        </h1>
        <ul>
          <li>
            <a
              href="/projects/game-capture/intro"
            >
              Game Capture - a TikTok series
            </a>
          </li>
        </ul>
      </div>
      <div
        class="backToHome"
      >
        <a
          href="/"
        >
          ← Back to home
        </a>
      </div>
      <a
        href="https://plausible.io/rushinglabs.com"
      >
        RushingLabs - Analytics
      </a>
    </div>
    
  </div>
</div>
`;

exports[`renders each ProjectsSection page 3`] = `
<div>
  <div>
    <header
      class="header"
    >
      <div
        class="menuIcon"
      >
        <div />
        <div />
        <div />
        
      </div>
      <h1
        class="heading2Xl"
      >
        <a
          class="colorInherit"
          href="/"
        >
          Rushing Labs
        </a>
      </h1>
      <div
        class="navbarLinks"
      >
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/blog"
          >
            Blog
          </a>
        </h2>
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/projects"
          >
            Projects
          </a>
        </h2>
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/docs"
          >
            Docs
          </a>
        </h2>
        <h2>
          <a
            class="text-xl font-bold underline text-inherit"
            href="/about"
          >
            About
          </a>
        </h2>
      </div>
    </header>
    <div
      class="mainContent"
    >
      <div
        class="container"
      >
        <h1>
          Project: 
          owasp
        </h1>
        <ul>
          <li>
            <a
              href="/projects/owasp/a01-broken-access-control"
            >
              A01:2021 Broken Access Control
            </a>
          </li>
          <li>
            <a
              href="/projects/owasp/a02-cryptographic-failures"
            >
              A02:2021 Cryptographic Failures
            </a>
          </li>
          <li>
            <a
              href="/projects/owasp/a03-injection"
            >
              A03:2021 Injection
            </a>
          </li>
          <li>
            <a
              href="/projects/owasp/a04-insecure-design"
            >
              A04:2021 Insecure Design
            </a>
          </li>
          <li>
            <a
              href="/projects/owasp/a05-security-misconfiguration"
            >
              A05:2021 Security Misconfiguration
            </a>
          </li>
          <li>
            <a
              href="/projects/owasp/a06-vulnerable-outdated-components"
            >
              A06:2021 Vulnerable and Outdated Components
            </a>
          </li>
          <li>
            <a
              href="/projects/owasp/a07-identification-auth-failures"
            >
              A02:2021 Identification and Authentication Failures
            </a>
          </li>
          <li>
            <a
              href="/projects/owasp/a08-software-data-integrity-failures"
            >
              A08:2021 Software and Data Integrity Failures
            </a>
          </li>
          <li>
            <a
              href="/projects/owasp/a09-logging-monitoring-failures"
            >
              A09:2021 Security Logging and Monitoring Failures
            </a>
          </li>
          <li>
            <a
              href="/projects/owasp/a10-server-side-request-forgery"
            >
              A10:2021 Server Side Request Forgery (SSRF)
            </a>
          </li>
          <li>
            <a
              href="/projects/owasp/intro"
            >
              Intro: Why Bother "Explaning" the Top 10?
            </a>
          </li>
        </ul>
      </div>
      <div
        class="backToHome"
      >
        <a
          href="/"
        >
          ← Back to home
        </a>
      </div>
      <a
        href="https://plausible.io/rushinglabs.com"
      >
        RushingLabs - Analytics
      </a>
    </div>
    
  </div>
</div>
`;
